--- a/.github/workflows/standupAzureController.yml
+++ b/.github/workflows/standupAzureController.yml
@@ -132,9 +132,10 @@ jobs:
               }
             }
             '
-            # echo '::set-output name=vmPublicKeyParam::$value'  
-
             echo "value = $value"  
+
+            echo '::set-output name=vmPublicKeyParam::{"reference":{"keyVault":{"id":"/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${{env.AZURE_RESOURCE_GROUP}}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"},"secretName":"${{github.event.inputs.vm_admin_public_key_secret_name}}"}}'  
+
             # echo "vmPublicKeyParam=$value" >> $GITHUB_ENV
 
       - name: Print arm_params      
