--- a/.github/workflows/standupAzureController.yml
+++ b/.github/workflows/standupAzureController.yml
@@ -188,6 +188,10 @@ jobs:
 
       - name: RUN ssh command
         run: |
+          ssh controller "ls -la && pwd"
+    
+      - name: RUN ssh command
+        run: |
           ssh controller "\
             ls -la && \
             pwd
