--- a/.github/workflows/save.standupAzureController.yml
+++ b/.github/workflows/save.standupAzureController.yml
@@ -3,14 +3,14 @@
 # Copyright (c) 2020, Solace Corporation, Ricardo Gomez-Ulmke (ricardo.gomez-ulmke@solace.com)
 # ---------------------------------------------------------------------------------------------
 
-name: Standup Azure Controller
+name: SAVED Standup Azure Controller
 on:
   workflow_dispatch:
     inputs:
       controller_id:
           description: "unique controller id"
           required: true
-          default: w1
+          default: t4
       azure_location:
           description: "azure location / region"
           required: true
@@ -23,6 +23,19 @@ on:
           description: "vm admin username"
           required: true
           default: "controller"
+      azure_key_vault_name:
+          description: "name of the azure key vault"
+          required: true
+          # default: "solace-ci-controller-kv"
+          default: "sol-ci-ctrl-kv-4"
+      vm_admin_public_key_secret_name:
+          description: "public key name in key vault"
+          required: true
+          default: "vm-admin-public-key"
+      vm_admin_private_key_secret_name:
+          description: "private key name in key vault"
+          required: true
+          default: "vm-admin-private-key"
 
 env:
   PROJECT_PREFIX: '${{github.event.inputs.controller_id}}-solace-ci-controller'
@@ -32,7 +45,6 @@ env:
   KEY_FILE: ./azure_key  
   PARAMTERS_TEMPLATE_FILE: ./azure/.workflows/template.azure-deploy.parameters.json
   PARAMETERS_FILE: ./azure/.workflows/azure-deploy.parameters.json
-
 jobs:
   create_vm:
     runs-on: ubuntu-18.04
@@ -62,17 +74,27 @@ jobs:
             parametersJson=$( echo $parametersJson | jq -r '.parameters.zone.value=env.zone' )
           export vm_admin_username=${{github.event.inputs.vm_admin_username}}
             parametersJson=$( echo $parametersJson | jq -r '.parameters.vm_admin_username.value=env.vm_admin_username' )
-          export vm_admin_public_key=${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}
-            parametersJson=$( echo $parametersJson | jq -r '.parameters.vm_admin_public_key=env.vm_admin_public_key' )
+          export vm_admin_public_key='
+            {
+              "reference": {
+                "keyVault": {
+                  "id": "/subscriptions/${{secrets.AZURE_SUBSCRIPTION_ID}}/resourceGroups/${{env.AZURE_RESOURCE_GROUP}}/providers/Microsoft.KeyVault/vaults/${{github.event.inputs.azure_key_vault_name}}"
+                },
+                "secretName": "${{github.event.inputs.vm_admin_public_key_secret_name}}"
+              }
+            }
+            '  
+            parametersJson=$( echo $parametersJson | jq -r '.parameters.vm_admin_public_key=(env.vm_admin_public_key|fromjson)' )
 
           echo $parametersJson | jq . > ${PARAMETERS_FILE}    
 
-      - name: Show Parameters File
-        run: |
-          cat ${PARAMETERS_FILE}
+      # - name: Show Parameters File
+      #   run: |
+      #     cat ${PARAMETERS_FILE}
 
-      - name: "DEBUG: STOP WORKFLOW"
-        run: exit 1
+      - name: Generate Public/Private Key for Controller VM
+        run: |
+          ssh-keygen -t rsa -N '' -f ${KEY_FILE} <<< y 
 
       - name: Azure Login
         # https://github.com/marketplace/actions/azure-login
@@ -92,6 +114,32 @@ jobs:
             --tags project=${PROJECT_PREFIX} \
             --verbose
       
+      - name: Create Azure Key Vault
+        run: |
+          az keyvault create \
+            --name ${{github.event.inputs.azure_key_vault_name}} \
+            --resource-group ${AZURE_RESOURCE_GROUP} \
+            --location ${{github.event.inputs.azure_location}} \
+            --tags project=${PROJECT_PREFIX} \
+            --enabled-for-template-deployment true \
+            --verbose
+
+      - name: Set Azure Key Vault Secret - vm public key
+        run: |
+          az keyvault secret set \
+            --vault-name ${{github.event.inputs.azure_key_vault_name}} \
+            --name ${{github.event.inputs.vm_admin_public_key_secret_name}} \
+            --file ${KEY_FILE}.pub \
+            --verbose
+      
+      - name: Set Azure Key Vault Secret - vm private key
+        run: |
+          az keyvault secret set \
+            --vault-name ${{github.event.inputs.azure_key_vault_name}} \
+            --name ${{github.event.inputs.vm_admin_private_key_secret_name}} \
+            --file ${KEY_FILE} \
+            --verbose
+
       - name: Run ARM Deploy
         id: azure_deploy
         # https://github.com/marketplace/actions/deploy-azure-resource-manager-arm-template
