--- a/.github/workflows/standupAzureController.yml
+++ b/.github/workflows/standupAzureController.yml
@@ -68,8 +68,8 @@ jobs:
             parametersJson=$( echo $parametersJson | jq -r '.parameters.zone.value=env.zone' )
           export vm_admin_username=${{github.event.inputs.vm_admin_username}}
             parametersJson=$( echo $parametersJson | jq -r '.parameters.vm_admin_username.value=env.vm_admin_username' )
-          # export vm_admin_public_key="$PUBLIC_KEY"
-            parametersJson=$( echo $parametersJson | jq -r '.parameters.vm_admin_public_key="env.PUBLIC_KEY"' )
+          export vm_admin_public_key="$PUBLIC_KEY"
+            parametersJson=$( echo $parametersJson | jq -r '.parameters.vm_admin_public_key=env.vm_admin_public_key' )
 
           echo $parametersJson | jq . > ${PARAMETERS_FILE}    
 
