--- a/.github/workflows/standupAzureController.yml
+++ b/.github/workflows/standupAzureController.yml
@@ -119,15 +119,13 @@ jobs:
           template: ${{ env.AZURE_DEPLOY_ARM_TEMPLATE }}
           # parameters: id=${{ github.event.inputs.controller_id }} zone=${{ github.event.inputs.zone }} vm_admin_username=${{ github.event.inputs.vm_admin_username }} vm_admin_public_key='${{ github.event.inputs.vm_pub_key }}'
           # parameters: id=${{ github.event.inputs.controller_id }} zone=${{ github.event.inputs.zone }} vm_admin_username=${{ github.event.inputs.vm_admin_username }} vm_admin_public_key='${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}'
-          parameters: ${{env.PARAMETERS_FILE}} vm_admin_public_key="${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}"
-
+          # parameters: ${{env.PARAMETERS_FILE}} vm_admin_public_key="${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}" id=${{ github.event.inputs.controller_id }} zone=${{ github.event.inputs.zone }} vm_admin_username=${{ github.event.inputs.vm_admin_username }}
+          parameters: vm_admin_public_key="${{ secrets.CONTROLLER_VM_PUBLIC_KEY }}" id=${{ github.event.inputs.controller_id }} zone=${{ github.event.inputs.zone }} vm_admin_username=${{ github.event.inputs.vm_admin_username }}
+      
       - name: "TEST: show the deploy output"
         run: |
           echo "outputs:"
           echo "${{toJson(steps.azure_deploy.outputs)}}"
-
-      - name: "DEBUG: STOP WORKFLOW"
-        run: exit 1
 
       - name: Configure SSH
         run: |
