--- a/.github/workflows/_stash/save.standupAzureController.yml
+++ b/.github/workflows/_stash/save.standupAzureController.yml
@@ -3,7 +3,7 @@
 # Copyright (c) 2020, Solace Corporation, Ricardo Gomez-Ulmke (ricardo.gomez-ulmke@solace.com)
 # ---------------------------------------------------------------------------------------------
 
-name: SAVED Standup Azure Controller
+name: SAVED xx Standup Azure Controller
 on:
   workflow_dispatch:
     inputs:
